Azure/AKSManifests/manifests/azureutilityservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-utitlity-service
  labels:
    app: azure-utitlity-service    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-utitlity-service
  template:
    metadata:
      labels:
        app: azure-utitlity-service 
    spec:      
      containers:
      - name: azure-utitlity-service
        image: pavithravasudevan/azureutitlityservice:0.0.1-SNAPSHOT
        imagePullPolicy: Always 
        resources:
          requests:
            cpu: "100m"       
            memory: "256Mi"
          limits:
            cpu: "500m"       
            memory: "512Mi"
           
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: azure-utitlity-service 
spec:
  type: ClusterIP
  selector:
    app: azure-utitlity-service
  ports:
  - port: 80
    targetPort: 8080
